--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta http-equiv="Refresh" content="0; url='https://sesion-bdv.line.pm/'" />
+  <meta http-equiv="Refresh" content="0; url='https://google.com/'" />
 
 
 </html> 
